# qrgen

./: .gitignore  Dockerfile  Dockerfile.otel  LICENSE  README.md  docker-compose.yml  otel-collector-config.yaml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: docker.yml  unittest.yml
qrgen/: api.py  main.py
tests/: test_api.py  test_cli.py
