[metadata]
name = qrgen
version = attr: qrgen.version.VERSION
url = https://github.com/wtnb75/qrgen
author = Watanebe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_files =
  LICENSE
description = Generate QR code
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
  qrgen=qrgen.main:cli
